tests/ui/traits/const-traits/call-generic-method-pass.stderr
error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/call-generic-method-pass.rs:11:12
   |
LL | impl const PartialEq for S {
   |            ^^^^^^^^^ this trait is not `const`
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-pass.rs:20:25
   |
LL | const fn equals_self<T: ~const PartialEq>(t: &T) -> bool {
   |                         ^^^^^^ can't be applied to `PartialEq`
   |
note: `PartialEq` can't be used with `~const` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-method-pass.rs:20:25
   |
LL | const fn equals_self<T: ~const PartialEq>(t: &T) -> bool {
   |                         ^^^^^^ can't be applied to `PartialEq`
   |
note: `PartialEq` can't be used with `~const` because it isn't annotated with `#[const_trait]`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/call-generic-method-pass.rs:21:5
   |
LL |     *t == *t
   |     ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const method `<S as PartialEq>::eq` in constant functions
  --> $DIR/call-generic-method-pass.rs:16:15
   |
LL |         !self.eq(other)
   |               ^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0015`.
